--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -40,8 +40,9 @@ dependencies {
     /* Development */
     implementation project(':rximagepicker')
     implementation project(':imagepicker')
+	implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.2'
+	debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.2'
     debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.2'
 
     /* Release Check */
